# apps/server/src/api/components/health-check/health-check.dto.ts
@@ -1,0 +1,9 @@
+type HealthCheckResponse = {
+  health: boolean
+}
+
+const MapHealthCheckResponse = (ok: boolean): HealthCheckResponse => ({
+  health: ok,
+})
+
+export { HealthCheckResponse, MapHealthCheckResponse }
