# apps/server/src/api/components/health-check/index.ts
@@ -1,0 +1,2 @@
+export * from './health-check.controller'
+export * from './health-check.service'
