# apps/server/src/api/helpers/error-response.ts
@@ -1,0 +1,7 @@
+type ErrorResponse = {
+  status: string
+  message: string
+  details?: unknown
+}
+
+export { ErrorResponse }
