# apps/server/src/container/container.ts
@@ -2,6 +2,7 @@ import { IocContainer } from '@tsoa/runtime'
 import { PostgresJsDatabase } from 'drizzle-orm/postgres-js'
 import { container } from 'tsyringe'
 
+import { HealthCheckService } from '../api/components/health-check'
 import { UserRepository, UserService } from '../api/components/user'
 import { connectToDatabase } from '../db/db-conn'
 
@@ -11,6 +12,12 @@ container.register<PostgresJsDatabase<Record<string, never>>>('db', {
 
 container.register<UserRepository>('IUserRepository', {
   useValue: new UserRepository(
+    container.resolve<PostgresJsDatabase<Record<string, never>>>('db'),
+  ),
+})
+
+container.register<HealthCheckService>('IHealthCheckService', {
+  useValue: new HealthCheckService(
     container.resolve<PostgresJsDatabase<Record<string, never>>>('db'),
   ),
 })
